--- a/pbjson/Cargo.toml
+++ b/pbjson/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/influxdata/pbjson"
 
 serde = { version = "1.0", features = ["derive"] }
 base64 = "0.13"
+hex = "0.4"
 
 [dev-dependencies]
 bytes = "1.0"
